--- a/static/index.html
+++ b/static/index.html
@@ -114,6 +114,26 @@
             }
         }
 
+        function showContactModal() {
+            const modal = document.getElementById('contactModal');
+            modal.classList.remove('hidden');
+            modal.classList.add('fade-in');
+        }
+
+        function hideContactModal() {
+            const modal = document.getElementById('contactModal');
+            modal.classList.add('hidden');
+            modal.classList.remove('fade-in');
+        }
+
+        // Close modal when clicking outside
+        document.addEventListener('click', function (event) {
+            const modal = document.getElementById('contactModal');
+            if (event.target === modal) {
+                hideContactModal();
+            }
+        });
+
         // 页面加载完成后执行
         document.addEventListener('DOMContentLoaded', loadModels);
     </script>
@@ -267,6 +287,32 @@
             white-space: normal;
             overflow: visible;
         }
+
+        /* Modal animation */
+        @keyframes modalFadeIn {
+            from {
+                opacity: 0;
+                transform: translateY(-20px);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        #contactModal.fade-in {
+            animation: modalFadeIn 0.3s ease-out;
+        }
+
+        /* Footer icons hover effect */
+        .footer-icon {
+            transition: transform 0.2s ease-in-out;
+        }
+
+        .footer-icon:hover {
+            transform: translateY(-2px);
+        }
     </style>
 </head>
 
@@ -311,7 +357,8 @@
                         <span class="text-lg font-semibold text-gray-800">API密钥</span>
                     </div>
                     <div class="flex items-center w-full md:w-auto">
-                        <span id="api_key_display" class="truncate-text text-green-600 font-mono mr-2">未生成API密钥</span>
+                        <span id="api_key_display"
+                            class="truncate-text text-green-600 font-mono mr-2">生成API密钥后请保存</span>
                         <button onclick="copyToClipboard('api_key_display')"
                             class="bg-blue-500 text-white p-2 rounded-lg hover:bg-blue-600 transition-colors">
                             <i class="fas fa-copy"></i>
@@ -381,6 +428,32 @@
 
         <!-- 消息提示区域 -->
         <div id="message_area" class="mt-4 hidden"></div>
+
+        <!-- Footer -->
+        <div class="mt-8 flex justify-center space-x-6">
+            <a href="https://github.com/firslov/MyAPI" target="_blank"
+                class="text-gray-600 hover:text-indigo-600 transition-colors hover-scale">
+                <i class="fab fa-github text-2xl"></i>
+            </a>
+            <button onclick="showContactModal()"
+                class="text-gray-600 hover:text-indigo-600 transition-colors hover-scale">
+                <i class="fas fa-user-circle text-2xl"></i>
+            </button>
+        </div>
+    </div>
+
+    <!-- Contact Modal -->
+    <div id="contactModal" class="hidden fixed inset-0 bg-black bg-opacity-50 z-50 flex items-center justify-center">
+        <div class="bg-white rounded-lg p-6 max-w-sm w-full mx-4 relative">
+            <button onclick="hideContactModal()" class="absolute top-2 right-2 text-gray-500 hover:text-gray-700">
+                <i class="fas fa-times text-xl"></i>
+            </button>
+            <div class="text-center">
+                <h3 class="text-xl font-semibold text-gray-800 mb-4">联系作者</h3>
+                <img src="contact-qr.jpg" alt="Contact QR Code" class="mx-auto w-64 h-64 object-contain">
+                <p class="mt-4 text-gray-600">扫描二维码联系作者</p>
+            </div>
+        </div>
     </div>
 </body>
 
