--- a/static/index.html
+++ b/static/index.html
@@ -450,7 +450,7 @@
             </button>
             <div class="text-center">
                 <h3 class="text-xl font-semibold text-gray-800 mb-4">联系作者</h3>
-                <img src="contact-qr.jpg" alt="Contact QR Code" class="mx-auto w-64 h-64 object-contain">
+                <img src="/static/contact-qr.jpg" alt="Contact QR Code" class="mx-auto w-64 h-64 object-contain">
                 <p class="mt-4 text-gray-600">扫描二维码联系作者</p>
             </div>
         </div>
