--- a/static/index.html
+++ b/static/index.html
@@ -435,6 +435,10 @@
                 class="text-gray-600 hover:text-indigo-600 transition-colors hover-scale">
                 <i class="fab fa-github text-2xl"></i>
             </a>
+            <a href="https://chatboxai.app/zh#download" target="_blank"
+                class="text-gray-600 hover:text-indigo-600 transition-colors hover-scale">
+                <i class="fas fa-download text-2xl"></i>
+            </a>
             <button onclick="showContactModal()"
                 class="text-gray-600 hover:text-indigo-600 transition-colors hover-scale">
                 <i class="fas fa-user-circle text-2xl"></i>
