--- a/static/index.html
+++ b/static/index.html
@@ -390,7 +390,7 @@
                     </div>
                     <div class="flex items-center w-full md:w-auto">
                         <span id="curl_command_display"
-                            class="truncate-text text-green-600 font-mono mr-2">Loading...</span>
+                            class="truncate-text text-green-600 font-mono mr-2">生成API密钥后将显示</span>
                         <button onclick="copyToClipboard('curl_command_display')"
                             class="bg-blue-500 text-white p-2 rounded-lg hover:bg-blue-600 transition-colors">
                             <i class="fas fa-copy"></i>
