--- a/static/index.html
+++ b/static/index.html
@@ -445,7 +445,7 @@
         <div class="space-y-4">
             <!-- API Key Display -->
             <div class="card fade-in">
-                <div class="p-4">
+                <div class="bg-gray-50 rounded-lg p-4 hover-scale">
                     <div class="flex flex-col md:flex-row justify-between items-start md:items-center">
                         <div class="flex items-center mb-2 md:mb-0">
                             <i class="fas fa-key text-indigo-600 text-lg mr-3"></i>
